--- a/_[ECODEVT] Data Analysis.qmd
+++ b/_[ECODEVT] Data Analysis.qmd
@@ -170,7 +170,25 @@ ggplot(data = educ_data, aes(x = currenrollment_categ)) +
 ```
 
 ### \[1.3\] School category
+```{r}
+epiDisplay::tab1(CAA$schoolcateg_categ, cum.percent = TRUE, graph = FALSE)
+```
 
+```{r}
+count<-table(CAA$schoolcateg_categ) #this is to see how many are movies in your data and how many are TV shows.
+count
+```
+
+```{r}
+library(ggplot2)
+count_df <-as.data.frame(count) 
+names(count_df) <-c("type","count") 
+ggplot(count_df, aes(x = "", y = count, fill = type)) +
+  geom_bar(width = 1, stat = "identity", color = "white") +
+  coord_polar("y") +
+  scale_fill_manual(values = c("blue", "green","red")) +
+  labs(title = "School Categories", x = NULL, y = NULL, fill = "Category")
+```
 ------------------------------------------------------------------------
 
 ## OBJECTIVE 2 \| Identify the barriers
