Update _[ECODEVT] Data Analysis.qmd

--- a/_[ECODEVT] Data Analysis.qmd
+++ b/_[ECODEVT] Data Analysis.qmd
@@ -170,6 +170,11 @@ ggplot(data = educ_data, aes(x = currenrollment_categ)) +
 ```
 
 ### \[1.3\] School category
+
+```{r}
+psych::describe(CAA$schoolcateg_categ)
+```
+
 ```{r}
 epiDisplay::tab1(educ_data$schoolcateg_categ, cum.percent = TRUE, graph = FALSE)
 ```
@@ -180,14 +185,32 @@ count
 ```
 
 ```{r}
+
 library(ggplot2)
-count_df <-as.data.frame(count) 
-names(count_df) <-c("type","count") 
-ggplot(count_df, aes(x = "", y = count, fill = type)) +
-  geom_bar(width = 1, stat = "identity", color = "white") +
-  coord_polar("y") +
-  scale_fill_manual(values = c("blue", "green","red")) +
-  labs(title = "School Categories", x = NULL, y = NULL, fill = "Category")
+library(dplyr)  
+
+count_schoolcateg_categ <- as.data.frame(count)
+names(count_schoolcateg_categ) <- c("type", "count")
+
+count_schoolcateg_categ <- count_schoolcateg_categ %>%
+  mutate(
+    percentage = count / sum(count) * 100,
+    label = paste0(type, ": ", count, " (", round(percentage, 1), "%)")
+  )
+
+ggplot(count_schoolcateg_categ, aes(x = "", y = count, fill = type)) +
+  geom_bar(width = 1, stat = "identity", color = "black") +  
+  coord_polar("y") +  
+  scale_fill_manual(values = c("green", "red","blue")) +  
+  labs(
+    title = "Percentage of PWDs In Public/Private School",  
+    x = NULL,  
+    y = NULL,  
+    fill = "Category"  
+  ) +
+  geom_text(aes(label = label), 
+            position = position_stack(vjust = 0.5), 
+            color = "black")  
 ```
 ------------------------------------------------------------------------
 
